Added header and start body work

--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="utf-8">
       <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
         <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-    <title></title>
+    <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
+    <div class="container">
+    <header>
+      <img src="./resources/images/logo.png">
+      <span>SECRET AGENT SUPPLY INC.</span>
+    </header>
 
+      <div class="first">
+        <div class="block1">
+          NEW ARRIVAL
+
+
+        </div>
+
+      </div>
+
+      <div class="navbar">
+        <ul>
+          <li> <a href="#"></a> Eyewear</li>
+          <li><a href="#"></a>Apparel</li>
+          <li> <a href="#"></a>Gadgets</li>
+          <li><a href="#"></a>Vehicles</li>
+          <li><a href="#"></a>Classes</li>
+          <li><a href="#"></a>Contact</li>
+        </ul>
+
+      </div>
+
+      <div class="items">
+
+      </div>
+
+      <div class="info">
+
+      </div>
+    </div>
+    <span>Copyright Secret Agent Supply Inc.</span>
+    <footer>
+    </footer>
   </body>
 </html>
