Before I add all sorts of containers

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
-    <div class="container">
+
+
+
     <header>
       <img src="./resources/images/logo.png">
       <span>SECRET AGENT SUPPLY INC.</span>
     </header>
 
+  <div class="container">
+
       <div class="first">
         <div class="block1">
-          NEW ARRIVAL
-
+          <p>NEW ARRIVALS</p>
+          <h2>SPORTS BIKES AND MOTORCYCLES</h2>
 
         </div>
 
@@ -35,15 +39,47 @@
       </div>
 
       <div class="items">
+        <div class="spystuff">
+          <div class="tool">
+            <img src="./resources/images/pen.png">
+            <span>Exploding Pen</span>
+          </div>
+        </div>
+          <div class="spystuff">
+            <div class="tool">
+              <img src="resources/images/watch.png">
+              <span>Cellular Watch</span>
+            </div>
+          </div>
+          <div class="spystuff">
+              <div class="tool">
+                <img src="resources/images/glasses.png">
+                <span>Thermal Glasses</span>
+              </div>
+          </div>
 
-      </div>
+          </div>
 
-      <div class="info">
 
-      </div>
+
+
+
+        <div class= "info">
+          <div class= "square">
+            <span>Location</span>
+            <p>-47.346436, 84.32354</p>
+          </div>
+          <div class= "square">
+            <span>Hours</span>
+            <p>0800 - 1800</p>
+          </div>
+        </div>
+
     </div>
-    <span>Copyright Secret Agent Supply Inc.</span>
-    <footer>
-    </footer>
+
+      <footer>
+        <span>Copyright Secret Agent Supply Inc.</span>
+      </footer>
+
   </body>
 </html>
