everything but image center

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
-        <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+      <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
@@ -11,71 +11,74 @@
 
 
     <header>
-      <img src="./resources/images/logo.png">
-      <span>SECRET AGENT SUPPLY INC.</span>
+      <div class="container">
+        <div class="one">
+          <img src="./resources/images/logo.png">
+          <span>SECRET AGENT SUPPLY INC.</span>
+        </div>
+      </div>
     </header>
 
-  <div class="container">
-
       <div class="first">
-        <div class="block1">
-          <p>NEW ARRIVALS</p>
-          <h2>SPORTS BIKES AND MOTORCYCLES</h2>
-
-        </div>
-
+          <div class="container">
+            <div class="block1">
+              <p>NEW ARRIVALS</p>
+              <h2>SPORTS BIKES AND MOTORCYCLES</h2>
+            </div>
+          </div>
       </div>
 
       <div class="navbar">
-        <ul>
-          <li> <a href="#"></a> Eyewear</li>
-          <li><a href="#"></a>Apparel</li>
-          <li> <a href="#"></a>Gadgets</li>
-          <li><a href="#"></a>Vehicles</li>
-          <li><a href="#"></a>Classes</li>
-          <li><a href="#"></a>Contact</li>
-        </ul>
-
+        <div class="container">
+          <ul>
+            <li> <a href="#"></a> Eyewear</li>
+            <li><a href="#"></a>Apparel</li>
+            <li> <a href="#"></a>Gadgets</li>
+            <li><a href="#"></a>Vehicles</li>
+            <li><a href="#"></a>Classes</li>
+            <li><a href="#"></a>Contact</li>
+          </ul>
+        </div>
       </div>
 
+      <main>
       <div class="items">
-        <div class="spystuff">
-          <div class="tool">
-            <img src="./resources/images/pen.png">
-            <span>Exploding Pen</span>
-          </div>
-        </div>
+        <div class="container">
           <div class="spystuff">
-            <div class="tool">
-              <img src="resources/images/watch.png">
-              <span>Cellular Watch</span>
+            <div class="two">
+              <img src="./resources/images/pen.png">
+              <span>Exploding Pen</span>
             </div>
           </div>
-          <div class="spystuff">
-              <div class="tool">
-                <img src="resources/images/glasses.png">
-                <span>Thermal Glasses</span>
+            <div class="spystuff">
+              <div class="two">
+                <img src="resources/images/watch.png">
+                <span>Cellular Watch</span>
               </div>
-          </div>
-
-          </div>
-
-
-
-
-
-        <div class= "info">
-          <div class= "square">
-            <span>Location</span>
-            <p>-47.346436, 84.32354</p>
-          </div>
-          <div class= "square">
-            <span>Hours</span>
-            <p>0800 - 1800</p>
+            </div>
+              <div class="spystuff">
+                <div class="two">
+                  <img src="resources/images/glasses.png">
+                  <span>Thermal Glasses</span>
+                </div>
+            </div>
           </div>
         </div>
 
-    </div>
+          <div class= "info">
+            <div class="container">
+              <div class= "square">
+                <span>Location</span>
+                <p>-47.346436, 84.32354</p>
+              </div>
+              <div class= "square">
+                <span>Hours</span>
+                <p>0800 - 1800</p>
+              </div>
+
+            </div>
+        </div>
+      </main>
 
       <footer>
         <span>Copyright Secret Agent Supply Inc.</span>
